# vote-with-your-feet

./: .dockerignore  .env.production  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  env.example  hello.py  openapi.yaml  pyproject.toml  test_hello.py  votes.db
.claude/: settings.local.json
app/: __init__.py  config.py  database.py  main.py  models.py
app/middleware/: auth.py
app/routes/: admin.py  api.py
app/utils/: responses.py
data/: votes.db
docs/: AWS_DEPLOYMENT.md
plans/: display-no-votes.md
static/css/: admin.css  display.css  display_completed.css
static/js/: display.js  display_completed.js
templates/: admin.html  admin_edit_poll.html  admin_edit_votes.html  display.html  display_completed.html  display_no_votes.html
tests/: test_admin.py  test_api.py  test_app.py  test_display.py  test_models.py  test_utils.py
